tests/generators/generators.exp
Error ------------------------------------------------------------ class.js:4:11

Cannot yield empty string because string is incompatible with number.

Error: class.js:4
  4:     yield ""; // error: string ~> number
               ^^ Cannot yield empty string because string [1] is incompatible with number [2].
  References:
    4:     yield ""; // error: string ~> number
                 ^^ [1]: string
    2:   *stmt_yield(): Generator<number, void, void> {
                                  ^^^^^^ [2]: number

Error ------------------------------------------------------------ class.js:15:8

Cannot cast `b` to string because number is incompatible with string.

Error: class.js:15
 15:       (b : string); // error: number ~> string
            ^ Cannot cast `b` to string because number [1] is incompatible with string [2].
  References:
    7:   *stmt_next(): Generator<void, void, number> {
                                             ^^^^^^ [1]: number
   15:       (b : string); // error: number ~> string
                  ^^^^^^ [2]: string

Error ----------------------------------------------------------- class.js:24:12

Cannot return empty string because in type argument `Return`, string is
incompatible with number.

Error: class.js:24
 24:     return ""; // error: string ~> number
                ^^ Cannot return empty string because in type argument `Return`, string [1] is incompatible with number [2].
  References:
   24:     return ""; // error: string ~> number
                  ^^ [1]: string
   23:   *stmt_return_err(): Generator<void, number, void> {
                                             ^^^^^^ [2]: number

Error ----------------------------------------------------------- class.js:28:22

Cannot assign `yield 0` to `x` because number is incompatible with boolean.

Error: class.js:28
 28:     var x: boolean = yield 0; // error: number ~> boolean
                          ^^^^^^^ Cannot assign `yield 0` to `x` because number [1] is incompatible with boolean [2].
  References:
  100: var infer_stmt_next = examples.infer_stmt().next(0).value; // error: number ~> boolean
                                                        ^ [1]: number
   28:     var x: boolean = yield 0; // error: number ~> boolean
                  ^^^^^^^ [2]: boolean

Error ----------------------------------------------------------- class.js:49:23

Cannot assign `yield` to `x` because string is incompatible with number.

Error: class.js:49
 49:       var x: number = yield; // error: string ~> number
                           ^^^^^ Cannot assign `yield` to `x` because string [1] is incompatible with number [2].
  References:
  119: examples.delegate_next_generator().next("");
                                               ^^ [1]: string
   49:       var x: number = yield; // error: string ~> number
                    ^^^^^^ [2]: number

Error ----------------------------------------------------------- class.js:67:21

Cannot assign `yield* inner()` to `x` because string is incompatible with
number.

Error: class.js:67
 67:     var x: number = yield *inner(); // error: string ~> number
                         ^^^^^^^^^^^^^^ Cannot assign `yield* inner()` to `x` because string [1] is incompatible with number [2].
  References:
   64:       return "";
                    ^^ [1]: string
   67:     var x: number = yield *inner(); // error: string ~> number
                  ^^^^^^ [2]: number

Error ----------------------------------------------------------- class.js:72:12

Cannot yield `xs` because in property `@@iterator`, the return value, and then
type argument `Next`; undefined is incompatible with string.

Error: class.js:72
 72:     yield *xs;
                ^^ Cannot yield `xs` because in property `@@iterator`, the return value, and then type argument `Next`; undefined [1] is incompatible with string [2].
  References:
  500: type Iterator<+T> = $Iterator<T,void,void>;
                                            ^^^^ [1]: undefined. See lib: <BUILTINS>/core.js:500
  125: examples.delegate_next_iterable([]).next(""); // error: Iterator has no next value
                                                ^^ [2]: string

Error ----------------------------------------------------------- class.js:98:41

Cannot cast `x` to string because number is incompatible with string.

Error: class.js:98
 98: for (var x of examples.infer_stmt()) { (x : string) } // error: number ~> string
                                             ^ Cannot cast `x` to string because number [1] is incompatible with string [2].
  References:
   28:     var x: boolean = yield 0; // error: number ~> boolean
                                  ^ [1]: number
   98: for (var x of examples.infer_stmt()) { (x : string) } // error: number ~> string
                                                   ^^^^^^ [2]: string

Error ----------------------------------------------------------- class.js:104:4

Cannot cast `infer_stmt_next` to boolean because string is incompatible with
boolean.

Error: class.js:104
104:   (infer_stmt_next : boolean) // error: string ~> boolean
        ^^^^^^^^^^^^^^^ Cannot cast `infer_stmt_next` to boolean because string [1] is incompatible with boolean [2].
  References:
   29:     return "";
                  ^^ [1]: string
  104:   (infer_stmt_next : boolean) // error: string ~> boolean
                            ^^^^^^^ [2]: boolean

Error ----------------------------------------------------------- class.js:122:4

Cannot cast `x` to number because string is incompatible with number.

Error: class.js:122
122:   (x : number) // error: string ~> number
        ^ Cannot cast `x` to number because string [1] is incompatible with number [2].
  References:
   56:       yield "";
                   ^^ [1]: string
  122:   (x : number) // error: string ~> number
              ^^^^^^ [2]: number

Error ----------------------------------------------------------- class.js:128:4

Cannot cast `x` to string because number is incompatible with string.

Error: class.js:128
128:   (x : string) // error: number ~> string
        ^ Cannot cast `x` to string because number [1] is incompatible with string [2].
  References:
   75:   *delegate_yield_iterable(xs: Array<number>) {
                                            ^^^^^^ [1]: number
  128:   (x : string) // error: number ~> string
              ^^^^^^ [2]: string

Error ---------------------------------------------------- class_failure.js:5:22

Cannot assign `yield 0` to `x` because number is incompatible with boolean.

Error: class_failure.js:5
  5:     var x: boolean = yield 0; // error: number ~> boolean
                          ^^^^^^^ Cannot assign `yield 0` to `x` because number [1] is incompatible with boolean [2].
  References:
   14: var infer_stmt_next = examples.infer_stmt().next(0).value; // error: number ~> boolean
                                                        ^ [1]: number
    5:     var x: boolean = yield 0; // error: number ~> boolean
                  ^^^^^^^ [2]: boolean

Error --------------------------------------------------- class_failure.js:12:41

Cannot cast `x` to string because number is incompatible with string.

Error: class_failure.js:12
 12: for (var x of examples.infer_stmt()) { (x : string) } // error: number ~> string
                                             ^ Cannot cast `x` to string because number [1] is incompatible with string [2].
  References:
    5:     var x: boolean = yield 0; // error: number ~> boolean
                                  ^ [1]: number
   12: for (var x of examples.infer_stmt()) { (x : string) } // error: number ~> string
                                                   ^^^^^^ [2]: string

Error ---------------------------------------------------- class_failure.js:19:4

Cannot cast `infer_stmt_next` to boolean because string is incompatible with
boolean.

Error: class_failure.js:19
 19:   (infer_stmt_next : boolean) // error: string ~> boolean
        ^^^^^^^^^^^^^^^ Cannot cast `infer_stmt_next` to boolean because string [1] is incompatible with boolean [2].
  References:
    6:     return "";
                  ^^ [1]: string
   19:   (infer_stmt_next : boolean) // error: string ~> boolean
                            ^^^^^^^ [2]: boolean

Error -------------------------------------------------------- generators.js:3:9

Cannot yield empty string because string is incompatible with number.

Error: generators.js:3
  3:   yield ""; // error: string ~> number
             ^^ Cannot yield empty string because string [1] is incompatible with number [2].
  References:
    3:   yield ""; // error: string ~> number
               ^^ [1]: string
    1: function *stmt_yield(): Generator<number, void, void> {
                                         ^^^^^^ [2]: number

Error ------------------------------------------------------- generators.js:14:6

Cannot cast `b` to string because number is incompatible with string.

Error: generators.js:14
 14:     (b : string); // error: number ~> string
          ^ Cannot cast `b` to string because number [1] is incompatible with string [2].
  References:
    6: function *stmt_next(): Generator<void, void, number> {
                                                    ^^^^^^ [1]: number
   14:     (b : string); // error: number ~> string
                ^^^^^^ [2]: string

Error ------------------------------------------------------ generators.js:23:10

Cannot return empty string because in type argument `Return`, string is
incompatible with number.

Error: generators.js:23
 23:   return ""; // error: string ~> number
              ^^ Cannot return empty string because in type argument `Return`, string [1] is incompatible with number [2].
  References:
   23:   return ""; // error: string ~> number
                ^^ [1]: string
   22: function *stmt_return_err(): Generator<void, number, void> {
                                                    ^^^^^^ [2]: number

Error ------------------------------------------------------ generators.js:27:20

Cannot assign `yield 0` to `x` because number is incompatible with boolean.

Error: generators.js:27
 27:   var x: boolean = yield 0;
                        ^^^^^^^ Cannot assign `yield 0` to `x` because number [1] is incompatible with boolean [2].
  References:
   31: var infer_stmt_next = infer_stmt().next(0).value; // error: number ~> boolean
                                               ^ [1]: number
   27:   var x: boolean = yield 0;
                ^^^^^^^ [2]: boolean

Error ------------------------------------------------------ generators.js:30:32

Cannot cast `x` to string because number is incompatible with string.

Error: generators.js:30
 30: for (var x of infer_stmt()) { (x : string) } // error: number ~> string
                                    ^ Cannot cast `x` to string because number [1] is incompatible with string [2].
  References:
   27:   var x: boolean = yield 0;
                                ^ [1]: number
   30: for (var x of infer_stmt()) { (x : string) } // error: number ~> string
                                          ^^^^^^ [2]: string

Error ------------------------------------------------------- generators.js:35:4

Cannot cast `infer_stmt_next` to boolean because string is incompatible with
boolean.

Error: generators.js:35
 35:   (infer_stmt_next : boolean) // error: string ~> boolean
        ^^^^^^^^^^^^^^^ Cannot cast `infer_stmt_next` to boolean because string [1] is incompatible with boolean [2].
  References:
   28:   return "";
                ^^ [1]: string
   35:   (infer_stmt_next : boolean) // error: string ~> boolean
                            ^^^^^^^ [2]: boolean

Error ------------------------------------------------------ generators.js:65:21

Cannot assign `yield` to `x` because string is incompatible with number.

Error: generators.js:65
 65:     var x: number = yield; // error: string ~> number
                         ^^^^^ Cannot assign `yield` to `x` because string [1] is incompatible with number [2].
  References:
   69: delegate_next_generator().next("");
                                      ^^ [1]: string
   65:     var x: number = yield; // error: string ~> number
                  ^^^^^^ [2]: number

Error ------------------------------------------------------- generators.js:79:4

Cannot cast `x` to number because string is incompatible with number.

Error: generators.js:79
 79:   (x : number) // error: string ~> number
        ^ Cannot cast `x` to number because string [1] is incompatible with number [2].
  References:
   73:     yield "";
                 ^^ [1]: string
   79:   (x : number) // error: string ~> number
              ^^^^^^ [2]: number

Error ------------------------------------------------------ generators.js:87:19

Cannot assign `yield* inner()` to `x` because string is incompatible with
number.

Error: generators.js:87
 87:   var x: number = yield *inner(); // error: string ~> number
                       ^^^^^^^^^^^^^^ Cannot assign `yield* inner()` to `x` because string [1] is incompatible with number [2].
  References:
   84:     return "";
                  ^^ [1]: string
   87:   var x: number = yield *inner(); // error: string ~> number
                ^^^^^^ [2]: number

Error ------------------------------------------------------ generators.js:92:10

Cannot yield `xs` because in property `@@iterator`, the return value, and then
type argument `Next`; undefined is incompatible with string.

Error: generators.js:92
 92:   yield *xs;
              ^^ Cannot yield `xs` because in property `@@iterator`, the return value, and then type argument `Next`; undefined [1] is incompatible with string [2].
  References:
  500: type Iterator<+T> = $Iterator<T,void,void>;
                                            ^^^^ [1]: undefined. See lib: <BUILTINS>/core.js:500
   94: delegate_next_iterable([]).next(""); // error: Iterator has no next value
                                       ^^ [2]: string

Error ------------------------------------------------------ generators.js:100:4

Cannot cast `x` to string because number is incompatible with string.

Error: generators.js:100
100:   (x : string) // error: number ~> string
        ^ Cannot cast `x` to string because number [1] is incompatible with string [2].
  References:
   96: function *delegate_yield_iterable(xs: Array<number>) {
                                                   ^^^^^^ [1]: number
  100:   (x : string) // error: number ~> string
              ^^^^^^ [2]: string

Error ------------------------------------------------------ generators.js:128:4

Cannot cast `multiple_return_result.value` to undefined because number is
incompatible with undefined.

Error: generators.js:128
128:   (multiple_return_result.value: void); // error: number|string ~> void
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Cannot cast `multiple_return_result.value` to undefined because number [1] is incompatible with undefined [2].
  References:
  121:     return 0;
                  ^ [1]: number
  128:   (multiple_return_result.value: void); // error: number|string ~> void
                                        ^^^^ [2]: undefined

Error ------------------------------------------------------ generators.js:128:4

Cannot cast `multiple_return_result.value` to undefined because string is
incompatible with undefined.

Error: generators.js:128
128:   (multiple_return_result.value: void); // error: number|string ~> void
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Cannot cast `multiple_return_result.value` to undefined because string [1] is incompatible with undefined [2].
  References:
  123:     return "foo";
                  ^^^^^ [1]: string
  128:   (multiple_return_result.value: void); // error: number|string ~> void
                                        ^^^^ [2]: undefined

Error -------------------------------------------------------------- refi.js:5:4

Cannot cast `x.a` to string because undefined is incompatible with string.

Error: refi.js:5
  5:   (x.a: string); // error
        ^^^ Cannot cast `x.a` to string because undefined [1] is incompatible with string [2].
  References:
    1: function *a(x: {a: void | string}): Generator<void, void, void> {
                          ^^^^ [1]: undefined
    5:   (x.a: string); // error
               ^^^^^^ [2]: string

Error ------------------------------------------------------------- refi.js:22:4

Cannot cast `x.a` to string because undefined is incompatible with string.

Error: refi.js:22
 22:   (x.a: string); // error
        ^^^ Cannot cast `x.a` to string because undefined [1] is incompatible with string [2].
  References:
   17: function *c(x: {a: void | string}): Generator<void, void, void> {
                          ^^^^ [1]: undefined
   22:   (x.a: string); // error
               ^^^^^^ [2]: string

Error ------------------------------------------------------------ return.js:5:4

Cannot cast `ret.value` to undefined because number is incompatible with
undefined.

Error: return.js:5
  5:   (ret.value: void); // error: string | number ~> void
        ^^^^^^^^^ Cannot cast `ret.value` to undefined because number [1] is incompatible with undefined [2].
  References:
    4:   var ret = gen.return(0);
                              ^ [1]: number
    5:   (ret.value: void); // error: string | number ~> void
                     ^^^^ [2]: undefined

Error ------------------------------------------------------------ return.js:5:4

Cannot cast `ret.value` to undefined because string is incompatible with
undefined.

Error: return.js:5
  5:   (ret.value: void); // error: string | number ~> void
        ^^^^^^^^^ Cannot cast `ret.value` to undefined because string [1] is incompatible with undefined [2].
  References:
    1: function test1(gen: Generator<void, string, void>) {
                                           ^^^^^^ [1]: string
    5:   (ret.value: void); // error: string | number ~> void
                     ^^^^ [2]: undefined

Error ----------------------------------------------------------- return.js:20:4

Cannot cast `refuse_return_result.value` to string because number is
incompatible with string.

Error: return.js:20
 20:   (refuse_return_result.value: string); // error: number | void ~> string
        ^^^^^^^^^^^^^^^^^^^^^^^^^^ Cannot cast `refuse_return_result.value` to string because number [1] is incompatible with string [2].
  References:
   14:     return 0;
                  ^ [1]: number
   20:   (refuse_return_result.value: string); // error: number | void ~> string
                                      ^^^^^^ [2]: string

Error ----------------------------------------------------------- return.js:20:4

Cannot cast `refuse_return_result.value` to string because undefined is
incompatible with string.

Error: return.js:20
 20:   (refuse_return_result.value: string); // error: number | void ~> string
        ^^^^^^^^^^^^^^^^^^^^^^^^^^ Cannot cast `refuse_return_result.value` to string because undefined [1] is incompatible with string [2].
  References:
  493:   | { done: true, +value?: Return }
                                  ^^^^^^ [1]: undefined. See lib: <BUILTINS>/core.js:493
   20:   (refuse_return_result.value: string); // error: number | void ~> string
                                      ^^^^^^ [2]: string

Error ------------------------------------------------------------ throw.js:11:4

Cannot cast `catch_return_value` to string because number is incompatible with
string.

Error: throw.js:11
 11:   (catch_return_value : string); // error: number ~> string
        ^^^^^^^^^^^^^^^^^^ Cannot cast `catch_return_value` to string because number [1] is incompatible with string [2].
  References:
    3:     yield 0;
                 ^ [1]: number
   11:   (catch_return_value : string); // error: number ~> string
                               ^^^^^^ [2]: string

Error ------------------------------------------------------------ throw.js:24:4

Cannot cast `yield_return_value` to string because number is incompatible with
string.

Error: throw.js:24
 24:   (yield_return_value: string); // error: number ~> string
        ^^^^^^^^^^^^^^^^^^ Cannot cast `yield_return_value` to string because number [1] is incompatible with string [2].
  References:
   16:     yield 0;
                 ^ [1]: number
   24:   (yield_return_value: string); // error: number ~> string
                              ^^^^^^ [2]: string


Found 35 errors
